dejo funcionando las cookies , su seteo y su get

--- a/Clase 2/src/views/home.handlebars
+++ b/Clase 2/src/views/home.handlebars
@@ -10,11 +10,11 @@
 
 <form action="/setCookie" method="POST">
 <label for="nameClient">Ingrese su nombre</label>
-<input type="text" name="nameClient">
+<input type="text" name="nameClient" required>
 <br>
 <br>
 <label for="mailClient">Ingrese su mail</label>
-<input type="text" name="mailClient">
+<input type="text" name="mailClient" required>
 <br>
 <br>
 <button type="submit">
