agrego boton para eliminar cookies

--- a/Clase 2/src/views/home.handlebars
+++ b/Clase 2/src/views/home.handlebars
@@ -1,12 +1,6 @@
 <h1>Bienvenido</h1>
 
-<br>
-<br>
-<button >
-   <a href="/getCookie"> getCookie</a>
-</button>
-<br>
-<br>
+
 
 <form action="/setCookie" method="POST">
 <label for="nameClient">Ingrese su nombre</label>
@@ -18,10 +12,20 @@
 <br>
 <br>
 <button type="submit">
-   Submit
+   createCookie
 </button>
-
-
+<br>
+<br>
+<button >
+   <a href="/getCookie"> getCookie</a>
+</button>
+<br>
+<br>
+<button >
+   <a href="/deleteCookie"> deleteCookie</a>
+</button>
+<br>
+<br>
 
 
 </form>
