--- a/Clase 2/src/views/home.handlebars
+++ b/Clase 2/src/views/home.handlebars
@@ -26,6 +26,16 @@
 </button>
 <br>
 <br>
+<button >
+   <a href="/session"> visit session</a>
+</button>
+<br>
+<br>
+<button >
+   <a href="/logout"> Borrar datos de session</a>
+</button>
+<br>
+<br>
 
 
 </form>
